--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:type"               content="article" />
   <meta property="og:title"              content="Polymer" />
   <meta property="og:description"        content="The most useful resource ever created for students." />
-  <meta property="og:image"              content="./assets/images/15782269884424.png" />
+  <meta property="og:image"              content="https://paperplane030.github.io/escape-seo/assets/images/15782269884424.png" />
   <!-- /og -->
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
