--- a/course_js.html
+++ b/course_js.html
@@ -17,6 +17,30 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="all.css">
   <title>Javascript | Polymer</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Javascript | Polymer"",
+      "image": [
+        "https://paperplane030.github.io/escape-seo/course_js.html",
+       ],
+      "description": "Nemo, totam ducimus hic earum labore officia quia sint
+      laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa
+      laboriosam alias ea adipisci?",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "reviewCount": "13,245"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://paperplane030.github.io/escape-seo/course_js.html",
+        "priceCurrency": "NTD",
+        "price": "2600.00",
+      }
+    }
+    </script>
 </head>
 
 <body>
