--- a/course_js.html
+++ b/course_js.html
@@ -22,9 +22,7 @@
       "@context": "https://schema.org/",
       "@type": "Product",
       "name": "Javascript | Polymer",
-      "description": "Nemo, totam ducimus hic earum labore officia quia sint
-      laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa
-      laboriosam alias ea adipisci?",
+      "description": "Nemo, totam ducimus hic earum labore officia quia sint laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa laboriosam alias ea adipisci?",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.5",
