--- a/course_js.html
+++ b/course_js.html
@@ -21,19 +21,11 @@
     {
       "@context": "https://schema.org/",
       "@type": "Product",
-      "name": "Executive Anvil",
+      "name": "Javascript | Polymer",
       "image": [
-        "https://example.com/photos/1x1/photo.jpg",
-        "https://example.com/photos/4x3/photo.jpg",
-        "https://example.com/photos/16x9/photo.jpg"
+        "https://paperplane030.github.io/escape-seo/assets/images/js.png"
       ],
-      "description": "Sleeker than ACME's Classic Anvil, the Executive Anvil is perfect for the business traveler looking for something to drop from a height.",
-      "sku": "0446310786",
-      "mpn": "925872",
-      "brand": {
-        "@type": "Brand",
-        "name": "ACME"
-      },
+      "description": "Nemo, totam ducimus hic earum labore officia quia sint laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa laboriosam alias ea adipisci?",
       "review": {
         "@type": "Review",
         "reviewRating": {
@@ -43,22 +35,25 @@
         },
         "author": {
           "@type": "Person",
-          "name": "Fred Benson"
+          "name": "Charlie"
         }
       },
       "aggregateRating": {
         "@type": "AggregateRating",
-        "ratingValue": "4.4",
-        "reviewCount": "89"
+        "ratingValue": "4.5",
+        "reviewCount": "13,425"
       },
       "offers": {
         "@type": "Offer",
-        "url": "https://example.com/anvil",
-        "priceCurrency": "USD",
-        "price": "119.99",
-        "priceValidUntil": "2020-11-20",
-        "itemCondition": "https://schema.org/UsedCondition",
-        "availability": "https://schema.org/InStock"
+        "url": "https://paperplane030.github.io/escape-seo/course_js.html",
+        "priceCurrency": "NTD",
+        "price": "2600.00",
+        "offers": [
+          {
+            "@type": "Offer",
+            "url": "https://paperplane030.github.io/escape-seo/course_js.html"
+          },
+        ]
       }
     }
   </script>
