--- a/course_js.html
+++ b/course_js.html
@@ -46,8 +46,7 @@
       "offers": {
         "@type": "Offer",
         "url": "https://paperplane030.github.io/escape-seo/course_js.html",
-        "priceCurrency": "NTD",
-        "price": "2600.00",
+        "price": "$2600.00",
         "offers": [
           {
             "@type": "Offer",
