--- a/course_js.html
+++ b/course_js.html
@@ -19,25 +19,13 @@
   <title>Javascript | Polymer</title>
   <script type="application/ld+json">
     {
-      "@context": "https://schema.org/",
+      "@context": "https://paperplane030.github.io/escape-seo/course_js.html",
       "@type": "Product",
       "name": "Javascript | Polymer",
       "image": [
         "https://paperplane030.github.io/escape-seo/assets/images/js.png"
       ],
-      "description": "Nemo, totam ducimus hic earum labore officia quia sint laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa laboriosam alias ea adipisci?",
-      "review": {
-        "@type": "Review",
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "4",
-          "bestRating": "5"
-        },
-        "author": {
-          "@type": "Person",
-          "name": "Charlie"
-        }
-      },
+      "description": "Nemo, totam ducimus hic earum labore officia quia sint laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa laboriosam alias ea adipisci?",      
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.5",
@@ -47,12 +35,7 @@
         "@type": "Offer",
         "url": "https://paperplane030.github.io/escape-seo/course_js.html",
         "price": "$2600.00",
-        "offers": [
-          {
-            "@type": "Offer",
-            "url": "https://paperplane030.github.io/escape-seo/course_js.html"
-          },
-        ]
+        "availability": "https://paperplane030.github.io/escape-seo/course_js.html"
       }
     }
   </script>
