--- a/course_js.html
+++ b/course_js.html
@@ -19,13 +19,25 @@
   <title>Javascript | Polymer</title>
   <script type="application/ld+json">
     {
-      "@context": "https://paperplane030.github.io/escape-seo/course_js.html",
+      "@context": "https://schema.org"",
       "@type": "Product",
       "name": "Javascript | Polymer",
       "image": [
         "https://paperplane030.github.io/escape-seo/assets/images/js.png"
       ],
       "description": "Nemo, totam ducimus hic earum labore officia quia sint laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa laboriosam alias ea adipisci?",      
+      "review": {
+        "@type": "Review",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "4",
+          "bestRating": "5"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Charlie"
+        }
+      },
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.5",
@@ -39,25 +51,6 @@
       }
     }
   </script>
-  <!-- <script type="application/ld+json">
-    {
-      "@context": "https://schema.org/",
-      "@type": "Product",
-      "name": "Javascript | Polymer",
-      "description": "Nemo, totam ducimus hic earum labore officia quia sint laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa laboriosam alias ea adipisci?",
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.5",
-        "reviewCount": "13,245"
-      },
-      "offers": {
-        "@type": "Offer",
-        "url": "https://paperplane030.github.io/escape-seo/course_js.html",
-        "priceCurrency": "NTD",
-        "price": "2600.00",
-      }
-    }
-  </script> -->
 </head>
 
 <body>
