--- a/course_js.html
+++ b/course_js.html
@@ -19,36 +19,25 @@
   <title>Javascript | Polymer</title>
   <script type="application/ld+json">
     {
-      "@context": "https://schema.org"",
+      "@context": "http://schema.org",
       "@type": "Product",
-      "name": "Javascript | Polymer",
-      "image": [
-        "https://paperplane030.github.io/escape-seo/assets/images/js.png"
-      ],
-      "description": "Nemo, totam ducimus hic earum labore officia quia sint laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa laboriosam alias ea adipisci?",      
-      "review": {
-        "@type": "Review",
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "4",
-          "bestRating": "5"
-        },
-        "author": {
-          "@type": "Person",
-          "name": "Charlie"
-        }
-      },
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.5",
-        "reviewCount": "13,425"
+        "reviewCount": "13,245"
       },
+      "description": "Nemo, totam ducimus hic earum labore officia quia sint laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa laboriosam alias ea adipisci?",
+      "name": "Javascript | Polymer",
       "offers": {
         "@type": "Offer",
-        "url": "https://paperplane030.github.io/escape-seo/course_js.html",
-        "price": "$2600.00",
-        "availability": "https://paperplane030.github.io/escape-seo/course_js.html"
-      }
+        "url": "https://example.com/anvil",
+        "itemCondition": "https://schema.org/UsedCondition",
+        "availability": "http://schema.org/InStock",
+        "price": "2600.00",
+        "priceValidUntil": "2020-11-20",
+        "priceCurrency": "TWD"
+      },
+      "image": "https://paperplane030.github.io/escape-seo/assets/images/js.png"
     }
   </script>
 </head>
